# flange_handeye_calibration

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  Photoneo  README.md  UR5.py  calibrate.sh  calibration.py  calibration_AzureKinect.py  calibration_ransac_circle_aubo.py  calibration_ransac_circle_franka.py  calibration_ransac_circle_ur10.py  calibration_ransac_circle_ur10_debug.py  calibration_ransac_circle_ur10e.py  calibration_ransac_circle_ur5.py  calibration_ransac_circle_wandata.py  calibration_ransac_circle_zhangdata.py  collect_calibration_data_franka.py  collect_calibration_data_ur10.py  collect_calibration_data_ur5.py  debug.py  image_cap.sh  install_prerequisities.sh  package.xml  plot_pointcloud.py  plot_results.py  plot_results_separated.py  rgb_test.sh  rosdoc.yaml  setup.py  ur_realtime_controller.py
Kinect_Result/: H.npy  flange.pcd  measureRobot.txt  new.txt  readRobot.txt
calib_toolbox/: README.md  code-api.md
calib_toolbox/calibration/: calib_main.py  circle_fitting_main.py
calib_toolbox/calibration/PhotoneoLogFiles/: LogConfig.txt
calib_toolbox/cam_controller/: photoneo.py
calib_toolbox/config/: defaults.py
calib_toolbox/config_files/: offline_calib.yaml  online_calib.yaml
calib_toolbox/data/2019-06-14-sample/: 01_tool.ply  01_tool_valid.pcd  01_tool_valid.ply  02_tool.ply  02_tool_valid.pcd  02_tool_valid.ply  04_tool.ply  04_tool_valid.pcd  04_tool_valid.ply  06_tool.ply  06_tool_valid.pcd  06_tool_valid.ply  07_tool.ply  07_tool_valid.pcd  07_tool_valid.ply  08_tool.ply  08_tool_valid.pcd  08_tool_valid.ply  calib_data.json  calib_result.json
calib_toolbox/data/flange_ground_truth/: .e9f0259b74a2900faa9f5279c0ca377513116344.cam  Flange_Franka.STL
calib_toolbox/path_generator/: path_generator.py
calib_toolbox/robot_controller/: Aubo_i5_ROS.py  Franka_ROS.py  robot_controller_main.py
calib_toolbox/scripts/: calib.py  dev.py  test.py
calib_toolbox/utils/: Photoneo  __init__.py  pcl_helper.py  transform.py
cfg/: phoxi_camera.cfg
config/: phoxi_camera.yaml
data/: data.txt  target.txt
data/aubo/: H.npy  H_i.npy  p_camera_mat.npy  p_robot_mat.npy  results_photoneo.npz  tool0_15450164880_870971918106.pcd  tool0_15450166710_768043041229.pcd  tool0_15450167630_448277950287.pcd  tool0_15450168110_361639976501.pcd  tool0_15450168650_741581916809.pcd  tool0_15450169160_0325820446014.pcd  tool0_15450169670_0310099124908.pcd  tool0_15450170130_256912946701.pcd  tool0_15450191670_835854053497.pcd  tool0_15450192300_12195110321.pcd  tool0_15450192820_963979959488.pcd  tool0_15450193430_632038116455.pcd  tool0_15450193970_194714069366.pcd  tool0_15450194530_016242980957.pcd  tool0_15450195090_467080116272.pcd  tool0_15450195620_489757061005.pcd  tool0_15450196450_0346989631653.pcd  tool0_15450196990_312782049179.pcd  tool0_15450197670_402189970016.pcd  tool0_15450198300_52655506134.pcd  tool0_15450199010_244728088379.pcd  tool0_15450199620_688518047333.pcd  tool0_15450200630_237468004227.pcd  tool0_15450202410_921370983124.pcd  tool0_15450202980_526504993439.pcd  tool0_15450203590_306257963181.pcd  tool0_15450204410_0473580360413.pcd  tool0_15450205010_0921249389648.pcd  tool0_15450207780_512445926666.pcd  tool0_15450210240_690500974655.pcd  tool0_15450211170_362265110016.pcd  tool0_15450211690_181072950363.pcd  tool0_15450212190_366520881653.pcd  tool0_15450214910_600681066513.pcd  tool0_15450215410_751036882401.pcd  (+20 more)
data/data1/: data.txt
data/data_best/: data.txt
data/data_waste/: data.txt
data/franka/: H.npy  H_i.npy  calibration_robot_pose_data.npy  calibration_robot_pose_data.npz  p_camera_mat.npy  p_robot_mat.npy  results_photoneo.npz  results_photoneo_6.npz  results_photoneo_79.npz
data/new/: data1.txt  data2.txt
data/old/data10/: data.txt
data/old/data11/: data.txt
data/old/data12/: data.txt
data/old/data9/: data.txt  data_fx.txt
data/ur10e/: H.npy  H_i.npy  calibration_robot_pose_data.npz  p_camera_mat.npy  p_robot_mat.npy  results_photoneo.npz
data/ur5/: H.npy  H1.npy  H_i.npy  H_ransac.npy  calibration_robot_pose_data.npz  p_camera_mat.npy  p_robot_mat.npy  results_photoneo.npz
docs/: CodeAPI.md  Design Note.md  Phoxi_Camera_API_manual.md  Precision test.md  Precision_test.md
flange_ground_truth/: Flange_Franka.STL  Flange_Franka.ply  Flange_UR10e.STL  Flange_UR10e.ply  Flange_ur5.ply  aubo-i5-EndFlange_cropped.pcd  aubo-i5-EndFlange_cropped_m.pcd  flange_Franka.pcd  flange_Franka_cropped.pcd  flange_UR10e.pcd  flange_UR10e_cropped.pcd  flange_aubo_a.pcd  flange_aubo_cropped.pcd  flange_franka.pcd  flange_franka_ref.pcd  flange_ur5.STL  flange_ur5.pcd  flange_ur5_cropped.pcd  franka_ref2.pcd
include/phoxi_camera/: PhoXiException.h  PhoXiInterface.h  RosInterface.h  Types.h
launch/: display_urdf.launch  load_urdf.launch  phoxi_camera.launch  phoxi_camera_cal.launch  phoxi_camera_cal_test.launch  phoxi_camera_test.launch
meshes/visual/: PhoXi_XS.f.stl
rviz/: urdf.rviz
scripts/bionic_dl/: README.md  requirement.txt  setup.py
scripts/original calib codes/: collect_calibration_data_ur5.py  cooperate.py  debug.py
src/: PhoXiInterface.cpp  RosInterface.cpp  phoxi_camera_node.cpp
src/api_template/: phoxi_camera_test.py  phoxi_camera_test_cpp.cpp  phoxi_camera_test_cpp.h
src/cal_dev/: cal_main.py  calibration.py  calibration_ransac_circle_zhangdata.py  calibration_software_design.md  data_transfer.py  image_cap.sh  phoxi_camera_cal_camShooter.cpp  phoxi_camera_cal_dev.py  phoxi_camera_cal_lib.h  phoxi_camera_cal_listener.cpp  phoxi_camera_cal_test.cpp  phoxi_listener.py  test.py  utils.py
srv/: GetBool.srv  GetDeviceList.srv  GetFrame.srv  GetHardwareIdentification.srv  GetSupportedCapturingModes.srv  SaveFrame.srv  SetCoordinatesSpace.srv  SetTransformationMatrix.srv  TriggerImage.srv
srv/Deprecated/: Empty.srv  IsAcquiring.srv
test/: README.md
test/gtest/: test_phoxi_interface.cpp
test/interfaces/: config.py  ros_utils.py  test_phoxi_camera_interfaces_exist.py  test_phoxi_camera_ros_interfaces.py
urdf/: PhoXi3Dscanner.xacro  PhoXi3Dscanner_macro.xacro  PhoXi3Dscanner_values.xacro
(+43 files in other folders)
